--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="stylesheet" href="C:\Users\okosenko\excursion3\ressources\css\style.css" type="text/css" />
 </head>
 <body>
  <header>Discover hidden places in the world around you</header>   
