add video and 2 paragraphs below

--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="C:\Users\okosenko\excursion3\ressources\css\style.css" type="text/css" />
+    <link rel="stylesheet" href=".\ressources\css\style.css" type="text/css" />
 </head>
 <body>
  <header>Discover hidden places in the world around you</header>   
  <a href=""><p>Download Excursion (Coming soon!)</p></a>
+ <div class="mobile">
+    <video controls>
+        <source src=".\ressources\excursion.mp4" type="video/mp4">
+      </video>
+      <p class="guide">Your personal travel guide</p>
+      <p class="points-of-interest">Excursion remembers places you like, and recommends new points of interest around you.</p>
+ </div>
 </body>
 </html>
