add camp image, last paragraph and copyright

--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
  <header>Discover hidden places in the world around you</header>   
  <a href=""><p>Download Excursion (Coming soon!)</p></a>
  <div class="mobile">
-    <video controls>
+    <div class="container"><video controls>
         <source src=".\ressources\excursion.mp4" type="video/mp4">
-      </video>
+      </video></div></div>
       <p class="guide">Your personal travel guide</p>
       <p class="points-of-interest">Excursion remembers places you like, and recommends new points of interest around you.</p>
- </div>
+      <img class="camp" src="C:\Users\okosenko\excursion3\ressources\camp.png">
+      <div class="icon"><img src="C:\Users\okosenko\excursion3\ressources\phone.png"></div>
+      <p class="soon">Coming Soon for iPhone and Android</p>
+      <a href=""><p>Download Excursion (Coming soon!)</p></a>
+      <p class="copyright"><i class="far fa-copyright"></i> Excursion</p>
+ 
 </body>
 </html>
