--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       </video></div></div>
       <p class="guide">Your personal travel guide</p>
       <p class="points-of-interest">Excursion remembers places you like, and recommends new points of interest around you.</p>
-      <img class="camp" src="C:\Users\okosenko\excursion3\ressources\camp.png">
-      <div class="icon"><img src="C:\Users\okosenko\excursion3\ressources\phone.png"></div>
+      <img class="camp" src=".\ressources\camp.png">
+      <div class="icon"><img src=".\ressources\phone.png"></div>
       <p class="soon">Coming Soon for iPhone and Android</p>
       <a href=""><p>Download Excursion (Coming soon!)</p></a>
       <p class="copyright"><i class="far fa-copyright"></i> Excursion</p>
