update links with structure changes

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
  <a href=""><p>Download Excursion (Coming soon!)</p></a>
  <div class="mobile">
     <div class="container"><video controls>
-        <source src=".\ressources\excursion.mp4" type="video/mp4">
+        <source src=".\ressources\video\excursion.mp4" type="video/mp4">
       </video></div></div>
       <p class="guide">Your personal travel guide</p>
       <p class="points-of-interest">Excursion remembers places you like, and recommends new points of interest around you.</p>
-      <img class="camp" src=".\ressources\camp.png">
-      <div class="icon"><img src=".\ressources\phone.png"></div>
+      <img class="camp" src=".\ressources\images\camp.png">
+      <div class="icon"><img src=".\ressources\images\phone.png"></div>
       <p class="soon">Coming Soon for iPhone and Android</p>
       <a href=""><p>Download Excursion (Coming soon!)</p></a>
       <p class="copyright"><i class="far fa-copyright"></i> Excursion</p>
