--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" href=".\ressources\css\style.css" type="text/css" />
 </head>
 <body>
@@ -20,7 +22,7 @@
       <div class="icon"><img src=".\ressources\images\phone.png"></div>
       <p class="soon">Coming Soon for iPhone and Android</p>
       <a href=""><p>Download Excursion (Coming soon!)</p></a>
-      <p class="copyright"><i class="far fa-copyright"></i> Excursion</p>
+      <p class="copyright"><i class="fa-solid fa-copyright"></i> Excursion</p>
  
 </body>
 </html>
